--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,6 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     
     - name: Build Docker image
-      run: docker build -t dweblab/songdo .
+      run: docker build -t pjm315/songdo .
     - name: Push docker image
-      run: docker push dweblab/songdo:latest
+      run: docker push pjm315/songdo:latest
